Set Timeline as the aggregate root and change it to manage the List of snapshots as a subdomain.